--- a/project/model/templates/about.html
+++ b/project/model/templates/about.html
@@ -34,21 +34,40 @@
 
 	
 		<div id="home" class="page">
-			<div id="home-title">
-				<h4>Lập trình python</h4>
-				<img id="home-artwork-occ" src="{{ url_for('static', filename='images/home_deco_occ.svg') }}" alt="Trang trí trang chủ">
-				<br/>
-				<h2>Hệ thống phân loại động vật</h2>
-				<br/>
-				<h6>Dựa trên mạng Nơ-ron tích chập</h6>
+			<div class="introduction-container">
+				<div class="introduction-content">
+					<p>
+						Chào mừng bạn đến với <strong>Hệ thống Phân loại Động vật</strong>. Đây là một hệ thống học sâu (Deep Learning) được đào tạo trên dữ liệu hình ảnh của nhiều loại động vật khác nhau.
+					</p>
+					<p>
+						Mô hình tận dụng sức mạnh của mạng nơ-ron tích chập (Convolutional Neural Networks - CNNs) để trích xuất các đặc trưng từ hình ảnh và đưa ra dự đoán chính xác.
+					</p>
+					<div class="features">
+						<strong>Những tính năng nổi bật:</strong>
+						<ul>
+							<li>Nhận diện động vật với độ chính xác cao.</li>
+							<li>Hỗ trợ phân loại nhiều loài động vật, từ động vật hoang dã đến động vật nuôi.</li>
+							<li>Giao diện thân thiện và dễ sử dụng.</li>
+						</ul>
+					</div>
+					<div class="team-members">
+						<strong>Website được thực hiện bởi các thành viên:</strong>
+						<ul>
+							<li>Đàng Huỳnh Khánh Đoan - 48.01.104.027</li>
+							<li>Nguyễn Minh Hiếu - 48.01.104.044</li>
+							<li>Nguyễn Đắc Long - 48.01.104.080</li>
+							<li>Trần Thuận Phát - 48.01.104.103</li>
+							<li>Nguyễn Quang Vinh - 48.01.104.149</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<img id="home-artwork" src="{{ url_for('static', filename='images/home_decorations.svg') }}" alt="Trang trí trang chủ">		
 		</div>
+		
 
-		<!-- center button -->
-		<div class="center-button-wrapper">
-			<a href="{{ url_for('upload') }}" class="start-button">Start</a>
-		</div>
+		<!-- about modal category -->
+
+
 
 		<div id="modal">
 			
@@ -57,24 +76,7 @@
 			</div>
 		</div>
 
-		<!-- about modal category -->
-	
-
-		<!-- contact modal category -->
-		<div id="contact" class="page" style="display: none;">
-			<img id="contact-artwork" src="./img/contact-img-2.png"></img>
-			<div id="contact-box">
-				<div class="bordered-title">For more information about this project, contact Principal Investigator Dr. Michael Nappier, DVM, MAEd, DABVP.</div>
-				<div class="bordered-text">
-					<form id="contact-form">
-						<input type="text" style="float:left" placeholder="Name"></input>
-						<input type="text" style="float:right" placeholder="Email"></input>
-						<textarea placeholder="Enter your message"></textarea>
-						<button type="button">Submit</button>
-					</form>
-				</div>
-			</div>
-		</div>
+		
 
 		<div id="vr_button_frame"></div>
 		<div id="log" style="position:absolute;top:0;left:0;color:white;height:100%;width: 100%;pointer-events: none;"></div>
