--- a/project/model/templates/upload.html
+++ b/project/model/templates/upload.html
@@ -17,7 +17,7 @@
         <div id="logo"></div>
         <div id="logo-2"></div>
         <ul>
-            <li><a id="page_about" href="./">About</a></li>
+            <li><a id="page_about" href="{{ url_for('about') }}">About</a></li>
             <li>|</li>
             <li><a id="page_home" href="{{ url_for('index') }}">Home</a></li>
             <li>|</li>
